--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -2,22 +2,29 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/feedFragment">
-
+    app:startDestination="@id/arrivalFragment">
     <fragment
-        android:id="@+id/feedFragment"
-        android:name="com.example.bookmyflight.view.FeedFragment"
-        android:label="FeedFragment" >
+        android:id="@+id/arrivalFragment"
+        android:name="com.example.bookmyflight.view.ArrivalFragment"
+        android:label="Gelen Uçuşlar">
         <action
-            android:id="@+id/action_feedFragment_to_flightDetailFragment"
-            app:destination="@id/flightDetailFragment" />
+            android:id="@+id/action_arrivalFragment_to_departureFragment"
+            app:destination="@id/departureFragment" />
     </fragment>
     <fragment
-        android:id="@+id/flightDetailFragment"
-        android:name="com.example.bookmyflight.view.FlightDetailFragment"
-        android:label="FlightDetailFragment" >
+        android:id="@+id/departureFragment"
+        android:name="com.example.bookmyflight.view.DepartureFragment"
+        android:label="Giden Uçuşlar">
         <action
-            android:id="@+id/action_flightDetailFragment_to_feedFragment"
-            app:destination="@id/feedFragment" />
+            android:id="@+id/action_departureFragment_to_arrivalFragment"
+            app:destination="@id/arrivalFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/reservationsFragment"
+        android:name="com.example.bookmyflight.view.ReservationsFragment"
+        android:label="Rezervasyonlarım" >
+        <action
+            android:id="@+id/action_reservationsFragment_to_arrivalFragment2"
+            app:destination="@id/arrivalFragment" />
     </fragment>
 </navigation>
