--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,13 +2,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/feedFragment"
-        android:title="Feed"
-        android:icon="@drawable/ic_baseline_flight_24"
+        android:id="@+id/arrivalFragment"
+        android:title="@string/gelen_ucuslar"
+        android:icon="@drawable/arrow_down_24"
         />
     <item
-        android:id="@+id/flightDetailFragment"
-        android:title="Basket"
-        android:icon="@drawable/ic_baseline_airplane_ticket_24"
+        android:id="@+id/departureFragment"
+        android:title="@string/giden_ucuslar"
+        android:icon="@drawable/arrow_up_24"
         />
 </menu>
