--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="schipholBlue">#17004C</color>
     <color name="schipholGray">#D8D8D8</color>
+    <color name="cardBlue">#9A220071</color>
+
+
 </resources>
