--- a/app/src/main/res/layout/fragment_arrival.xml
+++ b/app/src/main/res/layout/fragment_arrival.xml
@@ -3,7 +3,6 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
-
 <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
     android:id="@+id/swipeRefreshLayout"
     android:layout_width="match_parent"
@@ -47,16 +46,15 @@
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/filter_list_24" />
 
+
         <TextView
-            android:id="@+id/textScheduleDate"
+            android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="36dp"
-            android:layout_marginEnd="105dp"
-            android:layout_marginBottom="5dp"
-            android:text="Select Date"
-            app:layout_constraintBottom_toTopOf="@+id/arrivalListRv"
-            app:layout_constraintEnd_toStartOf="@+id/imageButton"
+            android:layout_marginStart="21dp"
+            android:layout_marginTop="25dp"
+            android:text=""
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
