--- a/app/src/main/res/layout/fragment_flight_detail.xml
+++ b/app/src/main/res/layout/fragment_flight_detail.xml
@@ -12,22 +12,21 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
+            android:gravity="center"
             android:overScrollMode="ifContentScrolls"
             android:padding="16dp">
 
-            <TextView
-                android:id="@+id/flight_detail_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="UA202"
-                android:textAlignment="center"
+            <ImageView
+                android:id="@+id/flightQR"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
                 android:layout_marginBottom="16dp"
-                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+                android:contentDescription="@string/desc"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Planlanan kalkış saati"
+                android:text="Schedule Time"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
             <TextView
@@ -61,17 +60,19 @@
                 android:text="1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"/>
+                android:layout_marginBottom="10dp"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textSize="18sp"
                 android:text="Destination"
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+                 />
 
             <TextView
                 android:id="@+id/flight_detail_destination"
                 android:text="LAX"
+                android:textSize="18sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
@@ -79,14 +80,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Uçuş Durumu"
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+                android:textSize="18sp"
+                 />
 
             <TextView
                 android:id="@+id/flight_detail_state"
                 android:text="Delayed"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"/>
+                android:layout_marginBottom="10dp"/>
 
             <LinearLayout
                 android:layout_width="wrap_content"
