--- a/app/src/main/res/layout/item_departure_flight.xml
+++ b/app/src/main/res/layout/item_departure_flight.xml
@@ -20,8 +20,8 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="135dp"
-            android:background="@color/schipholGray"
-            android:layout_margin="10dp">
+            android:layout_margin="10dp"
+            android:background="@color/schipholGray">
 
             <ImageView
                 android:id="@+id/imageLogo"
@@ -29,20 +29,19 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="5dp"
                 android:layout_marginBottom="2dp"
+                android:contentDescription="@string/desc"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/textAirlineName"
-                app:srcCompat="@drawable/airplane"
-                android:contentDescription="@string/desc"/>
+                app:srcCompat="@drawable/airplane" />
 
             <TextView
                 android:id="@+id/textScheduleTime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="0dp"
                 android:text="19:00"
-                android:textStyle="bold"
                 android:textSize="20sp"
+                android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -61,12 +60,11 @@
                 android:id="@+id/textGate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="0dp"
                 android:layout_marginEnd="10dp"
                 android:text="g3"
                 android:textAllCaps="true"
-                android:textStyle="normal"
                 android:textSize="18sp"
+                android:textStyle="normal"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -110,6 +108,17 @@
                 android:text="TK 19826"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
+
+            <TextView
+                android:id="@+id/textUuid"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="46dp"
+                android:layout_marginEnd="172dp"
+                android:text="TextView"
+                android:visibility="gone"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
